Bundle component strings in //ios/web_view.

Fixes this warning log:
[0411/153122.161864:WARNING:resource_bundle.cc(565)] locale resources are not loaded

Also shows "This plugin is not supported" when visiting websites with flash content.

Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I33e7e65dcb8193a93f5208f847a39a20e8472987
Bug: 811603
Reviewed-on: https://chromium-review.googlesource.com/1024488
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Mike Dougherty <michaeldo@chromium.org>
Commit-Queue: John Wu <jzw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553312}
Former-commit-id: d56a1315142202005dd8d349876b98590d496bb6